[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ecfhe-sdk"
version = "1.1.0"
description = "EC-ElGamal Fully Homomorphic Encryption on BN254 — Python SDK"
readme = "README.md"
license = { text = "Proprietary — 4Chains Inc." }
requires-python = ">=3.11"
dependencies = [
    "py_ecc>=6.0.0,<9.0.0",
]

[project.optional-dependencies]
fast = ["mcl"]
dev  = ["pytest>=7"]

[tool.setuptools.packages.find]
where = ["."]
include = ["ecfhe*", "ecfhe_sdk*"]

[project.urls]
Homepage = "https://github.com/jlabsrd-glitch/ec-fhe-py"
